perf server: java17 support